--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
+                <div class="col-6">
+                    <div class="card-banner"></div>
+                    <div class="d-flex img-banner">
+                        <img src="./img/burguer.png" alt="">
+                    </div>
+                    <div class="card card-case">
+                        "Entrega rápida e funcionários simpáticos.
+                        <br>
+                        A comida chegou quente e 
+                        <br>
+                        muito saborosa!"
+                        <span class="card-case-name">
+                            <b>Débora de Borba</b>
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
