feat: add title and filter buttons to the menu section.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,42 @@
     </section>
 
     <section class="cardapio" id="cardapio">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center mb-5">
+                    <span class="hint-title">
+                        <b>Cardápio</b>
+                    </span>
+                    <h1 class="title">
+                        <b>Conheça o nosso cardápio</b>
+                    </h1>
+                </div>
+                <div class="col-12 container-menu">
+                    <a class="btn active btn-white btn-sm mr-3" href="">
+                        <i class="fas fa-hamburger"></i>&nbsp; Burgers
+                    </a>
 
+                    <a class="btn btn-white btn-sm mr-3" href="">
+                        <i class="fas fa-pizza-slice"></i>&nbsp; Pizzas
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3" href="">
+                        <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
+                    </a>
+
+                    <a class="btn btn-white btn-sm mr-3" href="">
+                        <i class="fas fa-bacon"></i>&nbsp; Steaks
+                    </a>
+                    <a class="btn btn-white btn-sm mr-3" href="">
+                        <i class="fas fa-cocktail"></i>&nbsp; Bebidas
+                    </a>
+                    <a class="btn btn-white btn-sm mr-3" href="">
+                        <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
+                    </a>
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <section class="depoimentos" id="depoimentos">
