--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
     </section>
 
     <section class="cardapio" id="cardapio">
+        <div class="background-cardapio"></div>
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center mb-5">
@@ -192,6 +193,93 @@
                     </a>
                 </div>
 
+                <div class="col-12">
+                    <div class="row" id="itensCardapio">
+                        <!-- TODO: Adicionar itens dinamicamente -->
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-produto">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt=""/>
+                                </div>
+                                <p class="title-produto text-center mt-4">
+                                    <b>Nome do produto grande demais</b>
+                                </p>
+                                <p class="price-produto text-center">
+                                    <b>R$ 154,90</b>
+                                </p>
+                                <div class="add-carrinho">
+                                    <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                                    <span class="add-numero-itens">0</span>
+                                    <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-produto">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt=""/>
+                                </div>
+                                <p class="title-produto text-center mt-4">
+                                    <b>Nome do produto grande demais</b>
+                                </p>
+                                <p class="price-produto text-center">
+                                    <b>R$ 154,90</b>
+                                </p>
+                                <div class="add-carrinho">
+                                    <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                                    <span class="add-numero-itens">0</span>
+                                    <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-produto">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt=""/>
+                                </div>
+                                <p class="title-produto text-center mt-4">
+                                    <b>Nome do produto grande demais</b>
+                                </p>
+                                <p class="price-produto text-center">
+                                    <b>R$ 154,90</b>
+                                </p>
+                                <div class="add-carrinho">
+                                    <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                                    <span class="add-numero-itens">0</span>
+                                    <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-3 mb-5">
+                            <div class="card card-item">
+                                <div class="img-produto">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt=""/>
+                                </div>
+                                <p class="title-produto text-center mt-4">
+                                    <b>Nome do produto grande demais</b>
+                                </p>
+                                <p class="price-produto text-center">
+                                    <b>R$ 154,90</b>
+                                </p>
+                                <div class="add-carrinho">
+                                    <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                                    <span class="add-numero-itens">0</span>
+                                    <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                                    <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 text-center">
+                    <a class="btn btn-white btn-sm" href="">Ver mais</a>
+                </div>
             </div>
         </div>
     </section>
