feat: add banner in testimony section.

--- a/index.html
+++ b/index.html
@@ -285,7 +285,22 @@
     </section>
 
     <section class="depoimentos" id="depoimentos">
+        <div class="container">
+            <div class="row">
 
+                <div class="col-5 text-center">
+                    <div class="card-depoimentos"></div>
+                    <div class="d-flex img-banner">
+                        <img src="./img/pizzas.png" alt="">
+                    </div>
+                </div>
+
+                <div class="col-7 text-center">
+                    
+                </div>
+
+            </div>
+        </div>
     </section>
 
     <section class="reserva" id="reservas">
