--- a/index.html
+++ b/index.html
@@ -428,7 +428,33 @@
     </section>
 
     <footer>
+        <div class="container">
 
+            <div class="row">
+
+                <div class="col-3 container-logo-footer">
+                    <img class="logo-footer" src="./img/logo.png" alt="">
+                </div>
+                <div class="col-6 container-texto-footer">
+                    <p class="mb-0">
+                        <b>Meno Online</b> &copy; Todos os direitos reservados
+                    </p>
+                </div>
+                <div class="col-3 container-redes-footer">
+                    <a href="" class="btn btn-sm btn-white btn-social mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="" class="btn btn-sm btn-white btn-social mr-3">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="btn btn-sm btn-white btn-social">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
     </footer>
 
     <script type="text/javascript" src="./js/jquery-1.12.4.min.js"></script>
