--- a/index.html
+++ b/index.html
@@ -457,6 +457,93 @@
         </div>
     </footer>
 
+    <div class="modal-full" id="modalCarrinho">
+        <div class="m-header">
+            <div class="container">
+                <a class="btn btn-white btn-sm float-right">
+                    Fechar
+                </a>
+                <div class="etapas">
+                    <div class="etapa etapa1 active">1</div>
+                    <div class="etapa etapa2">2</div>
+                    <div class="etapa etapa3">3</div>
+                </div>
+                <p class="title-carrinho mt-4">
+                    <b id="lblTituloEtapa">Seu carrinho:</b>
+                </p>
+            </div>
+        </div>
+
+        <div class="m-body">
+            <div class="container">
+
+                <div id="itensCarrinho" class="row mr-0 ml-0">
+                    
+                    <div class="col-12 item-carrinho">
+                        <div class="img-produto">
+                            <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg">
+                        </div>
+                        <div class="dados-produto">
+                            <p class="title-produto"><b>Nome do produto muito</b></p>
+                            <p class="price-produto"><b>R$149,90</b></p>
+                        </div>
+                        <div class="add-carrinho">
+                            <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                            <span class="add-numero-itens">0</span>
+                            <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                            <span class="btn btn-remove"><i class="fa fa-times"></i></span>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div id="localEntrega" class="row mr-0 ml-0 hidden">
+
+                </div>
+
+                <div id="resumoCarrinho" class="row mr-0 ml-0 hidden">
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="m-footer">
+            <div class="container">
+                <div class="container-total text-right mb-4">
+                    <p class="mb-0">
+                        <span>Subtotal:</span>
+                        <span id="lblSubTotal">R$ 95,00</span>
+                    </p>
+                    <p class="mb-0 texto-entrega">
+                        <span><i class="fas fa-motorcycle"></i> Entrega:</span>
+                        <span id="lblValorEntrega">+ R$ 5,00</span>
+                    </p>
+                    <p class="mb-0 texto-total">
+                        <span><b>Total:</b></span>
+                        <span id="lblValorTotal" class="valor-total"><b>R$ 100,00</b></span>
+                    </p>
+                </div>
+
+                <a id="btnEtapaPedido" class="btn btn-yellow float-right">
+                    Continuar
+                </a>
+
+                <a id="btnEtapaEndereco" class="btn btn-yellow float-right hidden">
+                    Revisar pedido
+                </a>
+
+                <a id="btnEtapaResumo" class="btn btn-yellow float-right hidden">
+                    Enviar pedido
+                </a>
+
+                <a id="btnVoltar" class="btn btn-white float-right mr-3 hidden">
+                    Voltar
+                </a>
+            </div>
+        </div>
+    </div>
+
     <script type="text/javascript" src="./js/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="./js/modernizr-3.5.0.min.js"></script>
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
