--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
                 </div>
 
-                <div id="localEntrega" class="row mr-0 ml-0">
+                <div id="localEntrega" class="row mr-0 ml-0 hidden">
 
                     <div class="col-4">
                         <div class="form-group container-cep">
@@ -554,8 +554,55 @@
 
                 </div>
 
-                <div id="resumoCarrinho" class="row mr-0 ml-0 hidden">
+                <div id="resumoCarrinho" class="row mr-0 ml-0">
+                    <div class="col-12">
+                        <p class="title-carrinh mt-4">
+                            <b>Itens do pedido:</b>
+                        </p>
+                    </div>
 
+                    <div class="col-12">
+                        <div class="row" id="listaItensResumo">
+
+                            <div class="col-12 item-carrinho resumo">
+                                <div class="img-produto-resumo">
+                                    <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg">
+                                </div>
+                                <div class="dados-produto">
+                                    <p class="title-produto-resumo">
+                                        <b>Nome do produto</b>
+                                    </p>
+                                    <p class="price-produto-resumo">
+                                        <b>R$ 100,00</b>
+                                    </p>
+                                </div>
+                                <p class="quantidade-produto-resumo">
+                                    x <b>3</b>
+                                </p>
+                            </div>
+                            
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <p class="title-carrinh mt-4">
+                            <b>Local da entrega:</b>
+                        </p>
+                    </div>
+
+                    <div class="col-12 item-carrinho resumo">
+                        <div class="img-map">
+                            <i class="fas fa-map-marked-alt"></i>
+                        </div>
+                        <div class="dados-produto">
+                            <p class="texto-endereco">
+                                <b id="resumoEndereco">Rua teste, 200, Bairro teste</b>
+                            </p>
+                            <p id="cidadeEndereco" class="cidade-endereco">
+                                Porto Alegre / 90050-102
+                            </p>
+                        </div>
+                    </div>
                 </div>
 
             </div>
