feat: implements calculation and loading of total values.

--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                     </p>
                     <p class="mb-0 texto-total">
                         <span><b>Total:</b></span>
-                        <span id="lblValorTotal" class="valor-total"><b>R$ 100,00</b></span>
+                        <span class="valor-total"><b id="lblValorTotal">R$ 100,00</b></span>
                     </p>
                 </div>
 
