feat: implements cart address step.

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                         <div class="form-group container-cep">
                             <label for="">CEP:</label>
                             <input id="txtCEP" class="form-control" type="text">
-                            <a class="btn btn-yellow btn-sm">
+                            <a class="btn btn-yellow btn-sm" onclick="cart.StepHandlers.AddressStep.GetAddressByZipCode()">
                                 <i class="fa fa-search"></i>
                             </a>
                         </div>
