feat: implements the completion of the order by sending the general summary of the order via whatsapp.

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                     Revisar pedido
                 </a>
 
-                <a id="btnEtapaResumo" class="btn btn-yellow float-right hidden">
+                <a id="btnEtapaResumo" class="btn btn-yellow float-right hidden" onclick="cart.FinalizeOrder()">
                     Enviar pedido
                 </a>
 
