feat: implements the reservation request.

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                     <br>
                                     Reserve sua data e horário de forma simple e rápida.
                                 </p>
-                                <a class="btn btn-yellow mt-4">
+                                <a class="btn btn-yellow mt-4" onclick="SendBookingMessage()">
                                     Fazer reserva
                                 </a>
                             </div>
