feat: implements testimony interation.

--- a/index.html
+++ b/index.html
@@ -315,9 +315,9 @@
                         </div>
                     </div>
 
-                    <a class="btn btn-sm btn-white btn-social mr-3 active">1</a>
-                    <a class="btn btn-sm btn-white btn-social mr-3">2</a>
-                    <a class="btn btn-sm btn-white btn-social">3</a>
+                    <a id="btnDepoimento1" onclick="OpenTestimony(1)" class="btn btn-sm btn-white btn-social btn-testimony mr-3 active">1</a>
+                    <a id="btnDepoimento2" onclick="OpenTestimony(2)" class="btn btn-sm btn-white btn-social btn-testimony mr-3">2</a>
+                    <a id="btnDepoimento3" onclick="OpenTestimony(3)" class="btn btn-sm btn-white btn-social btn-testimony">3</a>
 
                 </div>
 
