feat: implements social buttons functions.

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                             </a>
                         </div>
                     </div>
-                    <a href="" class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                    <a href="https://instagram.com/ve7xm/" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="" class="btn btn-sm btn-white btn-social mt-4 mr-3">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="" class="btn btn-sm btn-white btn-social mt-4">
+                    <a class="btn btn-sm btn-white btn-social mt-4" onclick="SendWhatsAppMessage()">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
@@ -379,13 +379,13 @@
                     </p>
                 </div>
                 <div class="col-3 container-redes-footer">
-                    <a href="" class="btn btn-sm btn-white btn-social mr-3">
+                    <a href="https://instagram.com/ve7xm/" target="_blank" class="btn btn-sm btn-white btn-social mr-3">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="" class="btn btn-sm btn-white btn-social mr-3">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="" class="btn btn-sm btn-white btn-social">
+                    <a class="btn btn-sm btn-white btn-social" onclick="SendWhatsAppMessage()">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
