--- a/index.html
+++ b/index.html
@@ -581,6 +581,9 @@
     <script type="text/javascript" src="./js/popper.min.js"></script>
     <script type="text/javascript" src="./js/dados.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./js/wow.min.js"></script>
+
+    <script>new WOW().init();</script>
 </body>
 
 </html>
