feat: makes the header and menu responsive.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/fontawesome.css" />
-    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/animate.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/responsivo.css" />
 
     <title>Menu Online - by ve7xm</title>
 </head>
@@ -23,7 +26,7 @@
 
     <section class="header">
         <div class="container">
-            <nav class="navbar navbar-expand-lg pl-0 pr-0">
+            <nav class="navbar navbar-expand-lg pl-0 pr-0 col-one">
                 <a class="navbar-brand wow fadeIn" href="#">
                     <img src="./img/logo.png" width="160" class="img-logo" />
                 </a>
@@ -98,7 +101,7 @@
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
-                <div class="col-6">
+                <div class="col-6 no-mobile">
                     <div class="card-banner wow fadeIn delay-02s"></div>
                     <div class="d-flex img-banner wow fadeIn delay-05s">
                         <img src="./img/burguer.png" alt="">
